--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
 
     <div class="home hz-margin">
         <h3>We'er getting married</h3>
-        <h1>Aman. & Gur.</h1>
+        <h1>Gokul & Unknown Girl( I assume )</h1>
         <div class="container-out">
             
             <div class="container-in text">
-                Friday, Oct. 20, 2023 <br>
-                ITC Sonar Bangla, Kolkata
+                Today or Tomorrow<br>
+                Random place, Gokarna
 
                 <button class="huge-btn">RSVP</button>
             </div>
@@ -50,11 +50,12 @@
             <div class="timeline-img"></div>
             <div class="timings">
                 <h3>01.&nbsp &nbsp Ceremony</h3>
-                <div class="text">Friday, Oct. 20, 2023 <br>
-                    ITC Sonar Bangla, Kolkata</div>
+                <div class="text">Today or Tomorrow<br>
+
+                Random place, Gokarna</div>
                 <h3>02.&nbsp &nbsp Reception</h3>
-                <div class="text">Sunday, Oct. 22, 2023 <br>
-                    Poddar Vihar, Kolkata</div>
+                <div class="text">Today or Tomorrow<br>
+                Random place, Gokarna</div>
             </div>
         </div>
     </div>
