--- a/index.html
+++ b/index.html
@@ -138,9 +138,9 @@
 
             <footer>
                 <h2>Give us a Call</h2>
-                <h2>Amandeep: 123-456-7890</h2>
-                <h2>Gurpreet: 123-456-7890</h2>
-                <div class="text">© 2023 for Aman and Gur. Made by <a href="https://twitter.com/NathArchak" class="text">@NathArchak</a></div>
+                <h2>Gokul: +91 98472 19084</h2>
+                <h2>Kuthiravattom: +91 495 274 1386</h2>
+                <div class="text">© 2023 for Gokul and Unknown. Made by <a href="https://twitter.com/NathArchak" class="text">@NathArchak</a></div>
             </footer>
         </div>
     </div>
